1. TRACE spam in VEEvaluation — org.openmarkov.core/src/main/resources/log4j2.xml line 21: changed the root logger from level="trace" to level="info". TRACE/DEBUG traces no longer fill the console during normal execution.
2. NPE in TreeADDEditorPanel — org.openmarkov.gui/.../TreeADDEditorPanel.java: the actionPerformed method had the pattern if (node instanceof Potential) { path = path.getParentPath(); ... } repeated in each branch of the switch, without a null check on getParentPath(). If the root node of the TreeADD (which is a Potential/TreeADDPotential) was double-clicked, getParentPath() returned null → NPE. Fix: extracted the navigation to the parent before the switch, with a null check and early return if there is no parent. This also simplifies the switch by eliminating duplicate code.